gitignore 수정 및 불필요한 파일 제거
- scss 관련해서 gitignore에 목록 추가

- 잘못생성된 scss관련 파일 두개 제거

--- a/.gitignore
+++ b/.gitignore
@@ -219,4 +219,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# scss cache
+*.css.map
+.sass-cache/
+
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,visualstudiocode
