--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/T-WK/unicube#readme",
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
-    "openai": "^4.103.0"
+    "openai": "^4.103.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "prettier": "^3.5.3"
